Use modern APIs for Reader, bounds check, and URL decode